change pull request queue Condition to update in prQueue
