# internal/pullrequest/queue/controller.go
@@ -56,8 +56,8 @@ func WithClient(client client.Client) Option {
 	}
 }
 
-func NewPullRequestQueue(teamName, namespace, bundleName, prNumber, commitSHA, gitRrepo string,
-	comps []*s2hv1.QueueComponent, prQueueStatus *s2hv1.PullRequestQueueStatus) *s2hv1.PullRequestQueue {
+func NewPullRequestQueue(teamName, namespace, bundleName, prNumber, commitSHA, gitRepo string,
+	comps []*s2hv1.QueueComponent, imageMissingList []s2hv1.Image, isFailed bool, createAt *metav1.Time) *s2hv1.PullRequestQueue {
 
 	qLabels := getPullRequestQueueLabels(teamName, bundleName, prNumber)
 	prQueueName := internal.GenPullRequestBundleName(bundleName, prNumber)
@@ -69,16 +69,19 @@ func NewPullRequestQueue(teamName, namespace, bundleName, prNumber, commitSHA, g
 			Labels:    qLabels,
 		},
 		Spec: s2hv1.PullRequestQueueSpec{
-			TeamName:           teamName,
-			BundleName:         bundleName,
-			PRNumber:           prNumber,
-			CommitSHA:          commitSHA,
-			Components:         comps,
-			UpcomingCommitSHA:  commitSHA,
-			UpcomingComponents: comps,
-			GitRepository:      gitRrepo,
+			TeamName:                    teamName,
+			BundleName:                  bundleName,
+			PRNumber:                    prNumber,
+			CommitSHA:                   commitSHA,
+			Components:                  comps,
+			UpcomingCommitSHA:           commitSHA,
+			UpcomingComponents:          comps,
+			GitRepository:               gitRepo,
+			ImageMissingList:            imageMissingList,
+			IsPullRequestTriggerFailed:  isFailed,
+			PullRequestTriggerCreatedAt: createAt,
 		},
-		Status: *prQueueStatus,
+		Status: s2hv1.PullRequestQueueStatus{},
 	}
 }
 
@@ -365,6 +368,13 @@ func (c *controller) Reconcile(req reconcile.Request) (reconcile.Result, error) 
 		logger.Error(err, "cannot set request header")
 	}
 
+	if isUpdate := ensurePullRequestQueueStatus(prQueue); isUpdate {
+		if err := c.updatePullRequestQueue(ctx, prQueue); err != nil {
+			return reconcile.Result{}, err
+		}
+		return reconcile.Result{}, nil
+	}
+
 	if skipReconcile, err := c.deleteFinalizerWhenFinished(ctx, prQueue); err != nil || skipReconcile {
 		if err != nil && !k8serrors.IsNotFound(err) {
 			return reconcile.Result{}, err
@@ -452,4 +462,46 @@ func (c *controller) Reconcile(req reconcile.Request) (reconcile.Result, error) 
 	}
 
 	return reconcile.Result{}, nil
+}
+
+func ensurePullRequestQueueStatus(prQueue *s2hv1.PullRequestQueue) bool {
+	//if prQueue.Status.IsConditionTrue(s2hv1.PullRequestQueueCondTriggerImagesVerified) ||
+	if len(prQueue.Status.Conditions) != 0 {
+		return false
+	}
+
+	if prQueue.Spec.IsPullRequestTriggerFailed {
+		prQueue.Status.SetCondition(
+			s2hv1.PullRequestQueueCondTriggerImagesVerified,
+			corev1.ConditionFalse,
+			"Pull request trigger Images does not exist")
+		prQueue.Status.SetCondition(
+			s2hv1.PullRequestQueueCondStarted,
+			corev1.ConditionFalse,
+			"Pull request queue has not been started due to pull request trigger failed")
+		prQueue.Status.SetCondition(
+			s2hv1.PullRequestQueueCondEnvCreated,
+			corev1.ConditionFalse,
+			"Skipped creating environment due to pull request trigger failed")
+		prQueue.Status.SetCondition(
+			s2hv1.PullRequestQueueCondDependenciesUpdated,
+			corev1.ConditionFalse,
+			"Skipped updating dependencies due to pull request trigger failed")
+		prQueue.Status.SetCondition(
+			s2hv1.PullRequestQueueCondDeployed,
+			corev1.ConditionFalse,
+			"Skipped deploying due to pull request trigger failed")
+		prQueue.Status.SetCondition(
+			s2hv1.PullRequestQueueCondTested,
+			corev1.ConditionFalse,
+			"Skipped running test due to pull request trigger failed")
+
+		prQueue.Status.State = s2hv1.PullRequestQueueCollecting
+		prQueue.Status.Result = s2hv1.PullRequestQueueFailure
+
+	} else {
+		prQueue.Status.SetCondition(s2hv1.PullRequestQueueCondTriggerImagesVerified,
+			corev1.ConditionTrue, "Pull request trigger Images has been verified")
+	}
+	return true
 }
